# modelscape

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: example_cifar_run.py  example_loss_optimizer_run.py  example_resnet_run.py  example_synthetic_run.py  notebook_example_cifar.ipynb
modelscape/: model.py
modelscape/backend/: cli.py  job.py  job_iterator.py  trainloop.py  utils.py  worker.py
modelscape/data/: data.py  mlp_grabs.py  monomial.py  ntk_coeffs.py
tests/: run_all_tests.sh  test_cpu_training.py  test_job_iterator_features.py  test_model_override.py  test_model_resnet.py  test_model_variants.py  test_mup_spectral_norm.py  test_ntp_spectral_norm.py  test_optimizer_loss.py  test_randomness_cpu.py  test_randomness_gpu.py  test_randomness_model.py
