[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelscape"
version = "1.1.0"
description = "Modelscape!"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
  "numpy",
  "torch",
  "tqdm",
  "einops",
  "scipy",
  "matplotlib",
  "mupify @ git+https://github.com/dkarkada/mupify.git",
  "expt-core @ git+https://github.com/dkarkada/expt-core.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modelscape*"]
exclude = ["tests*", "examples*", "__pycache__*"]